force-app/main/default/objects/Treaty_Version_Transaction__c/Treaty_Version_Transaction__c.object-meta.xml
<CustomObject>
    <label>Treaty Version Transaction</label>
    <nameField>
        <displayFormat>TreatyVersion-{0000}</displayFormat>
        <label>Treaty Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treaty Version Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>