force-app/main/default/objects/Treaty_Version_Transaction__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <label>GL Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>