force-app/main/default/objects/Treaty_Version_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5x5</fullName>
            </value>
            <value>
                <fullName>10x10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>