force-app/main/default/objects/Treaty_Version_Transaction__c/fields/Treaty_Version__c.field-meta.xml
<CustomField>
    <fullName>Treaty_Version__c</fullName>
    <label>Treaty Version</label>
    <referenceTo>Treaty_Versions__c</referenceTo>
    <relationshipLabel>Treaty Version Transaction</relationshipLabel>
    <relationshipName>Treaty_Version_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>